--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,10 +7,13 @@
       "@testing-library/react": "^9.3.2",
       "@testing-library/user-event": "^7.1.2",
       "axios": "^0.19.2",
+      "polished": "^3.4.4",
       "react": "^16.12.0",
       "react-dom": "^16.12.0",
+      "react-icons": "^3.9.0",
       "react-router-dom": "^5.1.2",
-      "react-scripts": "3.4.0"
+      "react-scripts": "3.4.0",
+      "styled-components": "^5.0.1"
    },
    "scripts": {
       "start": "react-app-rewired start",
@@ -36,6 +39,7 @@
    "devDependencies": {
       "babel-eslint": "^10.0.3",
       "babel-plugin-root-import": "^6.4.1",
+      "babel-preset-env": "^1.7.0",
       "customize-cra": "^0.9.1",
       "eslint": "^6.8.0",
       "eslint-config-airbnb": "^18.0.1",
