--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,9 +1,27 @@
 {
-  "name": "BackEnd",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+   "name": "BackEnd",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "dev": "nodemon src/server.js",
+      "queue": "nodemon src/queue.js",
+      "dev:debug": "nodemon --inspect src/server.js"
+   },
+   "dependencies": {
+      "axios": "^0.19.2",
+      "express": "^4.17.1",
+      "yup": "^0.28.1"
+   },
+   "devDependencies": {
+      "eslint": "^6.8.0",
+      "eslint-config-airbnb-base": "^14.0.0",
+      "eslint-config-prettier": "^6.10.0",
+      "eslint-plugin-import": "^2.20.1",
+      "eslint-plugin-import-helpers": "^1.0.2",
+      "eslint-plugin-prettier": "^3.1.2",
+      "nodemon": "^2.0.2",
+      "prettier": "^1.19.1",
+      "sucrase": "^3.12.1"
+   }
 }
