--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,7 @@
       "@testing-library/user-event": "^7.1.2",
       "axios": "^0.19.2",
       "polished": "^3.4.4",
+      "prop-types": "^15.7.2",
       "react": "^16.12.0",
       "react-dom": "^16.12.0",
       "react-icons": "^3.9.0",
