--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,6 +10,7 @@
    },
    "dependencies": {
       "axios": "^0.19.2",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "yup": "^0.28.1"
    },
