--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,13 +8,23 @@
       "@testing-library/user-event": "^7.1.2",
       "axios": "^0.19.2",
       "history": "^4.10.1",
+      "immer": "^5.3.6",
       "polished": "^3.4.4",
       "prop-types": "^15.7.2",
       "react": "^16.12.0",
       "react-dom": "^16.12.0",
       "react-icons": "^3.9.0",
+      "react-redux": "^7.2.0",
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.4.0",
+      "react-slick": "^0.25.2",
+      "reactotron-react-js": "^3.3.7",
+      "reactotron-redux": "^3.1.2",
+      "reactotron-redux-saga": "^4.2.3",
+      "redux": "^4.0.5",
+      "redux-persist": "^6.0.0",
+      "redux-saga": "^1.1.3",
+      "slick-carousel": "^1.8.1",
       "styled-components": "^5.0.1"
    },
    "scripts": {
